# eredis

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  logo.txt  xmake.lua
client/: Client.py
doc/: lexer-parser.md
src/: Parser.cpp  Parser.h  controller.cpp  controller.h  dbdata.h  dbmeta.h  dbops.cpp  dbops.h  erdb.cpp  erdb.hpp  eredis.cpp  eredis.hpp  erobject.cpp  erobject.h  main.cpp  parser.cpp  parser.h  skiplist.cc  skiplist.h  sl_map.h  sl_set.h  utils.cpp  utils.hpp
